--- a/src/Tradify.Backend/Tradify.Identity/Tradify.Identity.Application/Tradify.Identity.Application.csproj
+++ b/src/Tradify.Backend/Tradify.Identity/Tradify.Identity.Application/Tradify.Identity.Application.csproj
@@ -18,6 +18,8 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="FluentValidation" Version="11.5.2" />
+      <PackageReference Include="LanguageExt.Core" Version="4.4.3" />
       <PackageReference Include="MediatR" Version="12.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.2" />
